# Samplepython2

./: .gitignore  README.md  SECURITY_TRAINING_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
scripts/: run_security_scan.sh
security/: semgrep.training.yml
tests/: test_app.py
vuln_markers/: training_markers.py
